--- a/Company_BLA/Company_BLA.csproj
+++ b/Company_BLA/Company_BLA.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tunderbear.Utility\ThunderBear.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
